--- a/language_curse/courses_page.html
+++ b/language_curse/courses_page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-title">Our Language Courses</h1>
+        <h1 class="main-title"></h1>
         <div class="courses-grid">
             <div class="course-card">
                 <div class="card-image">
