--- a/language_curse/english/english.html
+++ b/language_curse/english/english.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="header-image">
-                <img src="https://images.unsplash.com/photo-1546410531-bb4caa6b424d?w=800" alt="English Course">
+                <img src="F:\scound term\web\project\web_project\language_curse\Statue of Liberty.jpg" alt="English Course">
             </div>
         </header>
 
@@ -246,42 +246,6 @@
                             <i class="fas fa-star-half-alt"></i>
                         </div>
                         <p class="comment-text">"The course materials are well-organized and the online resources are fantastic. I love how we get to practice with native speakers during the conversation sessions."</p>
-                    </div>
-
-                    <div class="comment-card">
-                        <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=David" alt="David Kim">
-                            <div class="comment-info">
-                                <h3>David Kim</h3>
-                                <span class="comment-date">Advanced Level</span>
-                            </div>
-                        </div>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <p class="comment-text">"The business English modules were exactly what I needed for my career. The instructors are professional and the course content is very practical."</p>
-                    </div>
-
-                    <div class="comment-card">
-                        <div class="comment-header">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Lisa" alt="Lisa Patel">
-                            <div class="comment-info">
-                                <h3>Lisa Patel</h3>
-                                <span class="comment-date">Intermediate Level</span>
-                            </div>
-                        </div>
-                        <div class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <p class="comment-text">"The pronunciation practice sessions are amazing! I've noticed a huge improvement in my speaking confidence. The teachers are very patient and supportive."</p>
                     </div>
                 </div>
                 <div class="slider-controls">
