--- a/language_curse/courses_page.html
+++ b/language_curse/courses_page.html
@@ -13,7 +13,7 @@
         <div class="courses-grid">
             <div class="course-card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1546410531-bb4caa6b424d?w=500" alt="English Course">
+                    <img src="F:\scound term\web\project\web_project\language_curse\Statue of Liberty.jpg" alt="English Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -44,7 +44,7 @@
 
             <div class="course-card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?w=500" alt="Spanish Course">
+                    <img src="F:\scound term\web\project\web_project\language_curse\spain.jpg" alt="Spanish Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -75,7 +75,7 @@
 
             <div class="course-card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?w=500" alt="French Course">
+                    <img src="F:\scound term\web\project\web_project\language_curse\Eiffeltower .jpg" alt="French Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -106,7 +106,7 @@
 
             <div class="course-card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1493976040374-85c8e12f0c0e?w=500" alt="Japanese Course">
+                    <img src="F:\scound term\web\project\web_project\language_curse\japan.jpg" alt="Japanese Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
