first programming courses page

--- a/programming_cat/index.html
+++ b/programming_cat/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Programming courses</title>
 </head>
 <body>
-
-
-
-
-
+    <div class="container"> 
+        <div class="image-container">
+            <img src="items/C++.png" alt="C++ logo">
+        </div>
+        <div>
+            <h1>
+                C++ courses
+            </h1>
+            <p>
+                best free c++ courses to ever exsit sign in now 
+            </p>
+        </div>
+    </div>
 </body>
 </html>
