added pic of the course

--- a/programming_cat/index.html
+++ b/programming_cat/index.html
@@ -7,9 +7,9 @@
     <title>Programming courses</title>
 </head>
 <body>
-    <div class="container"> 
-        <div class="image-container">
-            <img src="items/C++.png" alt="C++ logo">
+    <div class="card_container"> 
+        <div class="img_container">
+            <img src="items/C++_course.jpg" alt="C++ course">
         </div>
         <div>
             <h1>
