--- a/programming_cat/index.html
+++ b/programming_cat/index.html
@@ -7,17 +7,107 @@
     <title>Programming courses</title>
 </head>
 <body>
-    <div class="card_container"> 
-        <div class="img_container">
-            <img src="items/C++_course.jpg" alt="C++ course">
+    <div class="card_container"> <!--C++-->
+        <div class="card_img">
+            <img src="items/c++_course.png" alt="C++ course">
         </div>
-        <div>
+        <div class="card_text">
             <h1>
-                C++ courses
+                C++ from begginer to master
             </h1>
             <p>
-                best free c++ courses to ever exsit sign in now 
+                Build a strong foundation in C++ — 
+                one of the most powerful and widely used programming languages. 
+                Perfect for beginners,
+                this course covers everything from basic syntax to object-oriented programming 
             </p>
+            <div class="button_co">
+               <button class="card_button">Enroll Now</button>
+                <h2> 4.9/5⭐</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card_container"> <!--java-->
+        <div class="card_img">
+            <img src="items/java_course.jpeg" alt="java course">
+        </div>
+        <div class="card_text">
+            <h1>
+                Industrial-Grade Java Development
+            </h1>
+            <p>
+                Forge robust applications with Java - 
+                the backbone of enterprise systems and Android ecosystems.
+                This intensive bootcamp doesn't just teach syntax,
+                but how to architect scalable solutions using Spring Boot,
+                microservices.
+            </p>
+            <div class="button_co">
+               <button class="card_button">Enroll Now</button>
+                <h2> 4.6/5⭐</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card_container"> <!--python-->
+        <div class="card_img">
+            <img src="items/python_course.jpg" alt="python course">
+        </div>
+        <div class="card_text">
+            <h1>
+                Python: Your Swiss Army Knife for Coding
+            </h1>
+            <p>
+                Slice through data, automate workflows, and build AI models - 
+                all with one elegant language.
+                Whether you're analyzing stocks, scraping websites,
+                or training neural networks, this course makes Python's
+                "batteries-included".
+            </p>
+            <div class="button_co">
+               <button class="card_button">Enroll Now</button>
+                <h2> 4.7/5⭐</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card_container"> <!--php-->
+        <div class="card_img">
+            <img src="items/php_course.png" alt="php course">
+        </div>
+        <div class="card_text">
+            <h1>
+                PHP: Web Wizardry Unleashed
+            </h1>
+            <p>
+                Turn LAMP stacks into rocket fuel - 
+                we transform PHP from a scripting language into your web superpower.
+                You'll not just learn WordPress development,
+                but how to craft blazing-fast APIs.
+            </p>
+            <div class="button_co">
+               <button class="card_button">Enroll Now</button>
+                <h2> 4.3/5⭐</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card_container"> <!--java script-->
+        <div class="card_img">
+            <img src="items/java_script_course.jpg" alt="java script course">
+        </div>
+        <div class="card_text">
+            <h1>
+                JavaScript: The Web's Native Tongue
+            </h1>
+            <p>
+                Speak fluently across the entire stack - 
+                from browser animations to serverless cloud functions.
+                This isn't another tutorial recycling callback examples,
+                but a deep dive into the modern JS ecosystem:
+                TypeScript, Deno, and performance optimization.
+            </p>
+            <div class="button_co">
+               <button class="card_button">Enroll Now</button>
+                <h2> 4.8/5⭐</h2>
+            </div>
         </div>
     </div>
 </body>
