--- a/language_courses/courses_page.html
+++ b/language_courses/courses_page.html
@@ -13,7 +13,7 @@
         <div class="courses-grid">
             <div class="course-card">
                 <div class="card-image">
-                    <img src="F:\scound term\web\project\web_project\language_curse\Statue of Liberty.jpg" alt="English Course">
+                    <img src="pics/Statue of Liberty.jpg" alt="English Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -44,7 +44,7 @@
 
             <div class="course-card">
                 <div class="card-image">
-                    <img src="F:\scound term\web\project\web_project\language_curse\spain.jpg" alt="Spanish Course">
+                    <img src="pics/spain.jpg" alt="Spanish Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -75,7 +75,7 @@
 
             <div class="course-card">
                 <div class="card-image">
-                    <img src="F:\scound term\web\project\web_project\language_curse\Eiffeltower .jpg" alt="French Course">
+                    <img src="pics/Eiffeltower .jpg" alt="French Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
@@ -106,7 +106,7 @@
 
             <div class="course-card">
                 <div class="card-image">
-                    <img src="F:\scound term\web\project\web_project\language_curse\japan.jpg" alt="Japanese Course">
+                    <img src="pics/japan.jpg" alt="Japanese Course">
                 </div>
                 <div class="card-content">
                     <div class="card-icon">
