--- a/programming_courses/programming_pages/c++.html
+++ b/programming_courses/programming_pages/c++.html
@@ -42,8 +42,50 @@
                 <p>(1,089 reviews)</p>
             </div>
         </div>
-        <div class="">
+        <div class="W_U_learn"> <!--third container-->
+            <div class="W_U_learn_first">
+            <h1>What you'll learn</h1>
+            <ul>
+                <li>Automate everyday, repetitive tasks using C++ programs</li>
+                <li>Create engaging, graphical based programs</li>
+                <li>Develop a firm foundation of Computer Science concepts you can bring to any language you learn</li>
+            </ul>
+            </div>
+            <h1>skills you will gain</h1>
+            <div class="skill_grid">
+            <div class="skill_item"><p>C++</p></div>
+            <div class="skill_item"><p>Object-Oriented Programming (OOP)</p></div>
+            <div class="skill_item"><p>Computer Programming</p></div>
+            <div class="skill_item"><p>Computer Science</p></div>
+            <div class="skill_item"><p>Variables</p></div>
+            <div class="skill_item"><p>Iteration</p></div>
+            <div class="skill_item"><p>Conditionals</p></div>
+            <div class="skill_item"><p>vectors</p></div>
+            <div class="skill_item"><p>Strings</p></div>
+            <div class="skill_item"><p>Files</p></div>
+            <div class="skill_item"><p>Inheritance</p></div>
+            </div>
         </div>
-    </body>
+        <div class="outcome"><!--fourth container-->
+            <h1>By the end of this course you will have learned</h1>
 
+            <ol>
+            <li>Learned in-demand skills from university and industry experts.</li>
+            <li>Mastered a subject or tool through hands-on projects.</li>
+            <li>Developed a deep understanding of key concepts.</li>
+            <li>Earned a career certificate</li>
+            </ol>
+        </div>
+        <div class="slider_con"><!--fifth container-->
+            <h1>checkout other programming courses</h1>
+            <div class="slider">
+                <button><</button>
+                <div class="slider_cards_container">
+                    <!--will put cards here dont touch-->
+                </div>
+                <button>></button>
+            </div>
+        </div>
+        <script src="scripts.js"></script>
+    </body>
 </html>
