finished programming category

--- a/programming_courses/index.html
+++ b/programming_courses/index.html
@@ -44,7 +44,7 @@
                 microservices.
             </p>
             <div class="button_co">
-               <button class="card_button">Enroll Now</button>
+               <button class="card_button"onclick="opencourse('programming_pages/java.html')">Enroll Now</button>
                 <h2> 4.6/5⭐</h2>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 "batteries-included".
             </p>
             <div class="button_co">
-               <button class="card_button">Enroll Now</button>
+               <button class="card_button"onclick="opencourse('programming_pages/python.html')">Enroll Now</button>
                 <h2> 4.7/5⭐</h2>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 but how to craft blazing-fast APIs.
             </p>
             <div class="button_co">
-               <button class="card_button">Enroll Now</button>
+               <button class="card_button"onclick="opencourse('programming_pages/php.html')">Enroll Now</button>
                 <h2> 4.3/5⭐</h2>
             </div>
         </div>
@@ -106,7 +106,7 @@
                 TypeScript, Deno, and performance optimization.
             </p>
             <div class="button_co">
-               <button class="card_button">Enroll Now</button>
+               <button class="card_button"onclick="opencourse('programming_pages/java_script.html')">Enroll Now</button>
                 <h2> 4.8/5⭐</h2>
             </div>
         </div>
