--- a/programming_courses/programming_pages/python.html
+++ b/programming_courses/programming_pages/python.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>C++ course</title>
+    <title>python course</title>
     </head>
 
     <body>
         <div class="first_container"><!--first container-->
             <div class="text_side">
                 <div>
-                <h1>C++ from begginer to master</h1>
-                <p>Build a strong foundation in C++ — 
-                    one of the most powerful and widely used programming languages. 
-                    Perfect for beginners,
-                    this course covers everything from basic syntax to object-oriented programming
+                <h1>Python: Your Swiss Army Knife for Coding </h1>
+                <p>Slice through data, automate workflows, and build AI models - 
+                    all with one elegant language. Whether you're analyzing stocks, 
+                    scraping websites, or training neural networks, this course makes Python's "batteries-included". 
                 </p>
                 </div>
-                 <center><button id="enroll-btn">enroll</button></center>
+                <center><button id="enroll-btn">enroll</button></center>
             </div>
             <div class="img_side">
-                <img src="../items/c++_course.png" alt="C++ course">
+                <img src="../items/python_course.jpg" alt="C++ course">
             </div>
         </div>
         <div class="course_info"><!--secound container-->
@@ -38,7 +37,7 @@
                 <p>Learn at your own pace</p>
             </div>
             <div class="info_item">
-                <h1>4.9/5⭐</h1>
+                <h1>4.7/5⭐</h1>
                 <p>(1,089 reviews)</p>
             </div>
         </div>
@@ -46,14 +45,14 @@
             <div class="W_U_learn_first">
             <h1>What you'll learn</h1>
             <ul>
-                <li>Automate everyday, repetitive tasks using C++ programs</li>
+                <li>Automate everyday, repetitive tasks using python programs</li>
                 <li>Create engaging, graphical based programs</li>
                 <li>Develop a firm foundation of Computer Science concepts you can bring to any language you learn</li>
             </ul>
             </div>
             <h1>skills you will gain</h1>
             <div class="skill_grid">
-            <div class="skill_item"><p>C++</p></div>
+            <div class="skill_item"><p>python</p></div>
             <div class="skill_item"><p>Object-Oriented Programming (OOP)</p></div>
             <div class="skill_item"><p>Computer Programming</p></div>
             <div class="skill_item"><p>Computer Science</p></div>
