--- a/programming_courses/programming_pages/java_script.html
+++ b/programming_courses/programming_pages/java_script.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>C++ course</title>
+    <title>javascript course</title>
     </head>
 
     <body>
         <div class="first_container"><!--first container-->
             <div class="text_side">
                 <div>
-                <h1>C++ from begginer to master</h1>
-                <p>Build a strong foundation in C++ — 
-                    one of the most powerful and widely used programming languages. 
-                    Perfect for beginners,
-                    this course covers everything from basic syntax to object-oriented programming
+                <h1>Industrial-Grade Java Development </h1>
+                <p>Forge robust applications with Java - 
+                    the backbone of enterprise systems and Android ecosystems.
+                     This intensive bootcamp doesn't just teach syntax, 
+                    but how to architect scalable solutions using Spring Boot, microservices. 
                 </p>
                 </div>
-                 <center><button id="enroll-btn">enroll</button></center>
+                <center><button id="enroll-btn">enroll</button></center>
             </div>
             <div class="img_side">
-                <img src="../items/c++_course.png" alt="C++ course">
+                <img src="../items/java_script_course.jpg" alt="C++ course">
             </div>
         </div>
         <div class="course_info"><!--secound container-->
             <div class="info_item">
                 <h1>Beginner level</h1>
-                <p>recommended for newcommers</p>
+                <p>No prior experience required</p>
             </div>
             <div class="info_item">
-                <h1>1 month</h1>
+                <h1>6 month</h1>
                 <p>at 10 hours a week</p>
             </div>
             <div class="info_item">
@@ -38,31 +38,31 @@
                 <p>Learn at your own pace</p>
             </div>
             <div class="info_item">
-                <h1>4.9/5⭐</h1>
-                <p>(1,089 reviews)</p>
+                <h1>4.8/5⭐</h1>
+                <p>14,396 reviews</p>
             </div>
         </div>
         <div class="W_U_learn"> <!--third container-->
             <div class="W_U_learn_first">
             <h1>What you'll learn</h1>
             <ul>
-                <li>Automate everyday, repetitive tasks using C++ programs</li>
+                <li>Automate everyday, repetitive tasks using javascript programs</li>
                 <li>Create engaging, graphical based programs</li>
                 <li>Develop a firm foundation of Computer Science concepts you can bring to any language you learn</li>
             </ul>
             </div>
             <h1>skills you will gain</h1>
             <div class="skill_grid">
-            <div class="skill_item"><p>C++</p></div>
+            <div class="skill_item"><p>Data Structures</p></div>
             <div class="skill_item"><p>Object-Oriented Programming (OOP)</p></div>
             <div class="skill_item"><p>Computer Programming</p></div>
             <div class="skill_item"><p>Computer Science</p></div>
             <div class="skill_item"><p>Variables</p></div>
             <div class="skill_item"><p>Iteration</p></div>
-            <div class="skill_item"><p>Conditionals</p></div>
-            <div class="skill_item"><p>vectors</p></div>
+            <div class="skill_item"><p>Hypertext Markup Language (HTML)</p></div>
+            <div class="skill_item"><p>Cascading Style Sheets (CSS)</p></div>
             <div class="skill_item"><p>Strings</p></div>
-            <div class="skill_item"><p>Files</p></div>
+            <div class="skill_item"><p>Javascript</p></div>
             <div class="skill_item"><p>Inheritance</p></div>
             </div>
         </div>
