--- a/programming_courses/programming_pages/php.html
+++ b/programming_courses/programming_pages/php.html
@@ -4,30 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>C++ course</title>
+    <title>php course</title>
     </head>
 
     <body>
         <div class="first_container"><!--first container-->
             <div class="text_side">
                 <div>
-                <h1>C++ from begginer to master</h1>
-                <p>Build a strong foundation in C++ — 
-                    one of the most powerful and widely used programming languages. 
-                    Perfect for beginners,
-                    this course covers everything from basic syntax to object-oriented programming
+                <h1>PHP: Web Wizardry Unleashed </h1>
+                <p>BTurn LAMP stacks into rocket fuel - 
+                    we transform PHP from a scripting language into your web superpower. 
+                    You'll not just learn WordPress development, but how to craft blazing-fast APIs. 
                 </p>
                 </div>
-                 <center><button id="enroll-btn">enroll</button></center>
+                <center><button id="enroll-btn">enroll</button></center>
             </div>
             <div class="img_side">
-                <img src="../items/c++_course.png" alt="C++ course">
+                <img src="../items/php_course.png" alt="C++ course">
             </div>
         </div>
         <div class="course_info"><!--secound container-->
             <div class="info_item">
-                <h1>Beginner level</h1>
-                <p>recommended for newcommers</p>
+                <h1>Intermediate level</h1>
+                <p>Some related experience required</p>
             </div>
             <div class="info_item">
                 <h1>1 month</h1>
@@ -38,7 +37,7 @@
                 <p>Learn at your own pace</p>
             </div>
             <div class="info_item">
-                <h1>4.9/5⭐</h1>
+                <h1>4.3/5⭐</h1>
                 <p>(1,089 reviews)</p>
             </div>
         </div>
@@ -46,7 +45,7 @@
             <div class="W_U_learn_first">
             <h1>What you'll learn</h1>
             <ul>
-                <li>Automate everyday, repetitive tasks using C++ programs</li>
+                <li>Automate everyday, repetitive tasks using php programs</li>
                 <li>Create engaging, graphical based programs</li>
                 <li>Develop a firm foundation of Computer Science concepts you can bring to any language you learn</li>
             </ul>
